# boost_optional_ext

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  configure.sh  configure_win.sh  configure_xcode.sh
.github/workflows/: c-cpp.yml
boost/: optional_ext.hpp
examples/ex_1/: main.cpp
examples/ex_1/data_service/: CDefDataProvider.cpp  CDefDataProvider.h  IDataProvider.h
tests/: test_hof.cpp  test_optional_ext.cpp  test_optional_ext_with_const.cpp  tests_main.cpp
